--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "chart.js": "^4.2.1",
     "datatables.net": "^1.13.4",
     "datatables.net-dt": "^1.13.4",
-    "date-picker": "^0.3.0",
+    "date-picker": "^0.5.0",
     "file-saver": "^2.0.5",
     "flowbite": "^1.6.3",
     "jquery": "^3.6.4",
@@ -25,10 +25,11 @@
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-qr-code": "^2.0.11",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.5.0",
     "react-scripts": "^5.0.1",
-    "sweetalert2": "^11.4.8"
+    "sweetalert2": "^11.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
