--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "date-picker": "^0.5.0",
     "file-saver": "^2.0.5",
     "flowbite": "^1.6.3",
+    "grunt": "^1.6.1",
     "jquery": "^3.6.4",
     "postcss-cli": "^7.1.2",
     "postcss-flexbugs-fixes": "^5.0.2",
