--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,6 +57,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.8",
+    "eslint": "^8.36.0",
     "postcss": "^8.4.20",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "web-vitals": "^3.1.0"
