--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^4.2.1",
     "datatables.net": "^1.13.4",
     "datatables.net-dt": "^1.13.4",
+    "date-picker": "^0.5.0",
     "file-saver": "^2.0.5",
     "flowbite": "^1.6.3",
     "jquery": "^3.6.4",
@@ -19,10 +20,12 @@
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.8.3",
-    "react": "^17.0.0",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-qr-code": "^2.0.11",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.5.0",
     "react-scripts": "^5.0.1",
@@ -54,7 +57,6 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.8",
-    "eslint": "^8.36.0",
     "postcss": "^8.4.20",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "web-vitals": "^3.1.0"
